--- a/HotelResortBooking.Web/HotelResortBooking.Web.csproj
+++ b/HotelResortBooking.Web/HotelResortBooking.Web.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\Domain\Models\" />
+  </ItemGroup>
+
 </Project>
